[gd_scene load_steps=25 format=3 uid="uid://cm5arp0pko7lj"]

[ext_resource type="Texture2D" uid="uid://bysrxij1wrtjw" path="res://Assets/Background/Level Select/1.png" id="1_jmdes"]
[ext_resource type="Shader" uid="uid://clqoww1r5qjtc" path="res://Assets/Background/Level Select/2.gdshader" id="2_cscis"]
[ext_resource type="Texture2D" uid="uid://vkrvyp1y4vmx" path="res://Assets/Background/Level Select/2.png" id="3_ar54w"]
[ext_resource type="Shader" uid="uid://bv2waux5qm4k" path="res://Assets/Background/Level Select/3.gdshader" id="4_rt5uk"]
[ext_resource type="Texture2D" uid="uid://kgqc87tqotsf" path="res://Assets/Background/Level Select/3.png" id="5_46kv7"]
[ext_resource type="Shader" uid="uid://uap418xy73rx" path="res://Assets/Background/Level Select/4.gdshader" id="6_ydsyd"]
[ext_resource type="Texture2D" uid="uid://pdpcxj0twnxl" path="res://Assets/Background/Level Select/4.png" id="7_w2ncf"]
[ext_resource type="Shader" uid="uid://cayw5plodgwnh" path="res://Assets/Background/Level Select/5.gdshader" id="8_t54o1"]
[ext_resource type="Texture2D" uid="uid://budav2u6135vf" path="res://Assets/Background/Level Select/5.png" id="9_vb8kd"]
[ext_resource type="FontFile" uid="uid://c41un0xmqs0d3" path="res://Assets/Fonts/JustMyType-KePl.ttf" id="10_fi2rw"]
[ext_resource type="Script" uid="uid://behxtm3pqq6ht" path="res://Scenes/Level Select/play_btn.gd" id="11_46kv7"]
[ext_resource type="PackedScene" uid="uid://btkxwms2kbslq" path="res://Scenes/Level Select/lvl_btn.tscn" id="11_800b0"]
[ext_resource type="Theme" uid="uid://bcxllnrrtn71x" path="res://Scenes/Level Select/theme.tres" id="12_ydsyd"]
[ext_resource type="ButtonGroup" uid="uid://vanh8mhrrw5i" path="res://Scenes/Local Multiplayer/new_button_group.tres" id="13_w2ncf"]
[ext_resource type="Texture2D" uid="uid://dt07a8t1t00oj" path="res://Assets/Background/10.png" id="14_t54o1"]
[ext_resource type="Texture2D" uid="uid://cvdk1buom2u07" path="res://Assets/Background/7.png" id="15_vb8kd"]
[ext_resource type="Texture2D" uid="uid://cf5uhboxqc5vp" path="res://Assets/Background/ev.png" id="16_fi2rw"]
[ext_resource type="Texture2D" uid="uid://cunrqvctn6c80" path="res://Assets/Background/pink_city.png" id="17_800b0"]
[ext_resource type="Script" uid="uid://dkwudegejhl5j" path="res://Scenes/Level Select/back_button.gd" id="19_w2ncf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y6qlj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tjccn"]
shader = ExtResource("2_cscis")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7cxj5"]
shader = ExtResource("4_rt5uk")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6kk20"]
shader = ExtResource("6_ydsyd")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_82hxd"]
shader = ExtResource("8_t54o1")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.33093, 3.31694)

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_y6qlj")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_jmdes")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_tjccn")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_ar54w")

[node name="TextureRect3" type="TextureRect" parent="."]
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_7cxj5")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_46kv7")

[node name="TextureRect4" type="TextureRect" parent="."]
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_6kk20")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("7_w2ncf")

[node name="TextureRect5" type="TextureRect" parent="."]
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_82hxd")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("9_vb8kd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 0.900649
offset_right = 569.901
offset_bottom = 42.0
scale = Vector2(0.755432, 0.637853)
theme_override_constants/margin_left = 234
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 225

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.873425, 0.517698, 0.533142, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("10_fi2rw")
theme_override_font_sizes/font_size = 60
text = "Local Multiplayer"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 31.8229
offset_top = 106.423
offset_right = 169.823
offset_bottom = 232.423
scale = Vector2(0.655633, 0.646136)

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player 1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="Name 1" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
alignment = 1
expand_to_text_length = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Ball Color:"

[node name="Ball Color 1" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
color = Color(0.310177, 0.321962, 0.216971, 1)
edit_alpha = false

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Trail Color:"

[node name="Trail Color 1" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
color = Color(0.310177, 0.321962, 0.216971, 1)
edit_alpha = false

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 285.506
offset_top = 287.313
offset_right = 326.506
offset_bottom = 318.313
text = "Play"
script = ExtResource("11_46kv7")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 455.128
offset_top = 107.328
offset_right = 593.128
offset_bottom = 233.328
scale = Vector2(0.655633, 0.646136)

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Player 2"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="Name 2" type="LineEdit" parent="VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
alignment = 1
expand_to_text_length = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Ball Color:"

[node name="Ball Color 2" type="ColorPickerButton" parent="VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
color = Color(0.310177, 0.321962, 0.216971, 1)
edit_alpha = false

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "Trail Color:"

[node name="Trail Color 2" type="ColorPickerButton" parent="VBoxContainer2/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
color = Color(0.310177, 0.321962, 0.216971, 1)
edit_alpha = false

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 171.724
offset_top = 83.5107
offset_right = 4799.72
offset_bottom = 2695.51
scale = Vector2(0.05, 0.05)
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Map1" type="Button" parent="VBoxContainer3/HBoxContainer"]
layout_mode = 2
theme = ExtResource("12_ydsyd")
toggle_mode = true
button_group = ExtResource("13_w2ncf")
icon = ExtResource("14_t54o1")

[node name="Map2" type="Button" parent="VBoxContainer3/HBoxContainer"]
layout_mode = 2
theme = ExtResource("12_ydsyd")
toggle_mode = true
button_group = ExtResource("13_w2ncf")
icon = ExtResource("15_vb8kd")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Map3" type="Button" parent="VBoxContainer3/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("12_ydsyd")
theme_override_constants/outline_size = 8
toggle_mode = true
button_group = ExtResource("13_w2ncf")
icon = ExtResource("16_fi2rw")

[node name="Map" type="Button" parent="VBoxContainer3/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("12_ydsyd")
theme_override_constants/outline_size = 25
toggle_mode = true
button_group = ExtResource("13_w2ncf")
icon = ExtResource("17_800b0")

[node name="back button" parent="." instance=ExtResource("11_800b0")]
layout_mode = 0
offset_left = 0.90065
offset_top = -0.602966
offset_right = 173.901
offset_bottom = 87.397
scale = Vector2(0.668941, 0.705474)
text = "Back"
script = ExtResource("19_w2ncf")

[connection signal="pressed" from="Button2" to="Button2" method="_on_pressed"]
